samples/_failures_safe/1761314664_b79f05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8c260fc.c: In function ‘main’:
./samples/SAFE/__tmp_f8c260fc.c:154:5: error: expected declaration or statement at end of input
  154 |     printf("Enter edges (u v weight):\n");
      |     ^~~~~~
